--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      src="https://cdn2.woxo.tech/a.js#62b36345397eb8002ff3d99c"
+      async data-usrc>
+    </script>
   </body>
 </html>
